# Cura

./: .arcconfig  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .hgignore  .printer-linter  .pylintrc  50_inst_per_sec.py  AEBOCODE.def.json  AEBOCODE.inst.cfg  AboutDialog.qml.jinja  AboutDialogVersionsList.qml.jinja  BuildVolume.py  CHANGES  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CPackConfig.cmake  CameraAnimation.py  ControlWindow.qml  ConvexHullJob.py  ConvexHullNode.py  CuraEngineBackend.py  CuraVersion.py.jinja  Cura_pb2.py  CustomTimelapse  DartConfiguration.tcl  DescriptionPane.qml  DiscoverOctoPrintAction.py  DiscoverOctoPrintAction.qml  DiscoverUM3Action.py  DiscoverUM3Action.qml  Dockerfile  FUNDING.yml  FilePane.qml  FirmwareUpdateWindow.qml  GCodeWriter.py  GitVersion.yml  HttpUploadDataStream.py  (+127 more)
.conan_gen/: Cura.run.xml.jinja
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  no-response.yml
.run_templates/: pycharm_cura_run.run.xml.jinja  pycharm_cura_test.run.xml.jinja
Commands/: TransferMeshCommand.py  TransferMeshesCommand.py  TransferVertCommand.py  TransferVerticeListCommand.py
Cura/: cura.py  doctest.py  serialCommunication.py  version
avr_isp/: chipDB.py  intelHex.py  ispBase.py  stk500v2.py
cmake/: CuraPluginInstall.cmake  CuraTests.cmake  mod_bundled_packages_json.py
cura/: ApplicationMetadata.py  Arrange.py  ArrangeObjectsAllBuildPlatesJob.py  ArrangeObjectsJob.py  AutoSave.py  BackendPlugin.py  BlockSlicingDecorator.py  BugReportHandler.py  BuildPlateModel.py  BuildVolume.py  CMakeLists.txt  CameraAnimation.py  CameraImageProvider.py  ContainerManager.py  ContainerSettingsModel.py  ConvexHullDecorator.py  ConvexHullJob.py  ConvexHullNode.py  CrashHandler.py  CuraActions.py  CuraAppSignals.py  CuraApplication.py  CuraApplication2.py  CuraConstants.py  CuraContainerRegistry.py  CuraEmptyInstanceContainers.py  CuraPackageManager.py  CuraRenderer.py  CuraSceneController.py  CuraSplashScreen.py  CuraVersion.py  CuraVersion.py.in  CuraView.py  DepthPass.py  Extruder.py  ExtruderManager.py  ExtruderManagerModel.py  ExtrudersModel.py  FirmwareUpdater.py  GCodeListDecorator.py  (+42 more)
de_DE/: cura.po  uranium.po
debian/: Cura.1  README.Debian  README.source  changelog  control  copyright  cura.1  cura.manpages  rules  watch
definitions/: lulzbot_mini_2.def.json  lulzbot_proxt.def.json  lulzbot_sidekick_289.def.json  lulzbot_taz_6.def.json  lulzbot_workhorse.def.json
doc/: settings_stacks.puml
docker/: build.sh  test.sh
docs/: Cura_Data_Model.odg  How_to_use_the_flame_graph_profiler.md  PULL_REQUEST_TEMPLATE.md  Profile Stack.drawio  Profile Structure.drawio  Report.md  index.md  repositories.md
es_ES/: cura.po  uranium.po
fr_FR/: cura.po  uranium.po
icons/: CMakeLists.txt  cura.icns
it_IT/: cura.po  uranium.po
ja_JP/: cura.po  uranium.po
ko_KR/: cura.po  uranium.po
licenses_thirdparty/: qt.md
materials/: generic_abs.xml.fdm_material  generic_pa.xml.fdm_material  generic_paht-cf15.xml.fdm_material
nl_NL/: cura.po  uranium.po
packaging/: create_appimage.py  dmg_sign_noterize.py
plugins/: CMakeLists.txt  README_plugins.txt  ThingiBrowser  TweakAtZ.py  TweakAtZ_V3.99-RC2.py  pauseAtZ.py
plugins/OctoPrintConnection/: CMakeLists.txt  DiscoverOctoPrintAction.py  OctoPrintOutputDevicePlugin.py  README.md  __init__.py
printer-linter/: README.md  printer-linter.py  pyproject.toml  setup.cfg  setup.py
printer-linter/src/: terminal.py
printer-linter/src/printerlinter/: __init__.py  defintion.py  diagnostic.py  factory.py  meshes.py  profile.py  replacement.py  terminal.py
printer-linter/src/printerlinter/formatters/: __init__.py  def_json_formatter.py  formatter.py  inst_cfg_formatter.py
printer-linter/src/printerlinter/linters/: __init__.py  defintion.py  diagnostic_generator.py  directory.py  formulas.py  linter.py  meshes.py  profile.py
printer-linter/tidy/: __init__.py  defintion.py  diagnostic.py  meshes.py
pt_PT/: cura.po  uranium.po
qml/: AddMachineWizard.qml  EngineLog.qml  OutputGCodeButton.qml  Printer.qml  PrinterActions.qml  PrinterButton.qml  PrinterToolbar.qml  SaveButton.qml  SettingsPane.qml  Sidebar.qml  SidebarAdvanced.qml  SidebarCategoryHeader.qml  SidebarHeader.qml  SidebarSimple.qml  SidebarTooltip.qml  ViewPage.qml
resources/: Attribution.txt  CMakeLists.txt  Cura.icns  README.md  README_resources.txt  blocks_abs.xml.fdm_material  blocks_petg.xml.fdm_material  blocks_pla.xml.fdm_material  blocks_tpu.xml.fdm_material  bundled_packages.json  conandata.yml  conanfile.py  creality_cr3040pro.def.json  packages.json
ru_RU/: cura.po  uranium.po
scripts/: 50_inst_per_sec.py  CustomTimelapse  check_gcode_buffer.py  check_invalid_imports.py  check_missing_translations.py  check_setting_visibility.py  check_shortcut_keys.py  create_lulzbot_profiles.py  extract_changelog.py  fix_app_qt_folder_names_for_codesign.py  fix_lokalize_translations.sh  fix_translation_memory.py  get_pypi_hashes.py  get_pypi_wheels_hashes.py  get_sdk_changelog.py  line_length_checker.py  lionbridge_import.py  obj_trimmer.py  recreate_lulzbot_profiles.py  rename_cura_1_tags.sh  update_po_with_changes.py
src/: BuildVolume.py  ConvexHullJob.py  ConvexHullNode.py  CuraApplication.py  PlatformPhysics.py  PlatformPhysicsOperation.py  PrintInformation.py  PrinterApplication.py
tests/: 50_inst_per_sec.py  TestArrange.py  TestBuildVolume.py  TestConvexHullDecorator.py  TestCuraSceneController.py  TestCuraSceneNode.py  TestExtruderManager.py  TestGCodeListDecorator.py  TestHitChecker.py  TestIntentManager.py  TestLayer.py  TestMachineAction.py  TestMachineManager.py  TestMaterialManager.py  TestOAuth2.py  TestObjectsModel.py  TestPrintInformation.py  TestPrintOrderManager.py  TestPrinterExtruderTrains.py  TestPrinterOutputDevice.py  TestProfileRequirements.py  TestQualityManager.py  TestShortcutKeys.py  TestThemes.py  conftest.py
tools/: check_preset_settings.py
variants/: lulzbot_mini_2_HE.inst.cfg  lulzbot_mini_2_SE.inst.cfg  lulzbot_mini_2_SL.inst.cfg  lulzbot_pro_HE.inst.cfg  lulzbot_pro_HS.inst.cfg  (+21 more)
(+29898 files in other folders)
